Update demo poms